@@ -22,6 +22,7 @@ requires 'Error::Pure' => 0.07;
 requires 'List::Util' => 0;
 requires 'MIME::Base64' => 0;
 requires 'Readonly' => 0;
+requires 'Tags::HTML' => 0.02;
 requires 'perl' => '5.8.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Tags-HTML-Stars';
