@@ -5,7 +5,7 @@ use English;
 use Error::Pure::Utils qw(clean);
 use Tags::HTML::Stars;
 use Tags::Output::Raw;
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 
 # Test.
@@ -15,8 +15,14 @@ my $obj = Tags::HTML::Stars->new(
 isa_ok($obj, 'Tags::HTML::Stars');
 
 # Test.
+$obj = Tags::HTML::Stars->new;
+isa_ok($obj, 'Tags::HTML::Stars');
+
+# Test.
 eval {
-	Tags::HTML::Stars->new;
+	Tags::HTML::Stars->new(
+		'tags' => 'foo',
+	);
 };
 is(
 	$EVAL_ERROR,
